apps/infra/kong/chart/externalname-hello-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-api
  namespace: kong
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  type: ExternalName
  externalName: hello-api.hello-api.svc.cluster.local
